--- a/Final_project_Лукин_И.Ю.ipynb
+++ b/Final_project_Лукин_И.Ю.ipynb
@@ -267,7 +267,7 @@
    "id": "9ee2202b",
    "metadata": {},
    "source": [
-    "## Эксперимент 1 — PPO vs SAC (одинаковый budget timesteps)\n",
+    "## Эксперимент 1 — PPO vs SAC\n",
     "\n",
     "**Контроль:** одинаковые `total_timesteps`, одинаковая архитектура (2×256), одинаковый seed, одинаковая схема оценки (EvalCallback).\n",
     "\n",
@@ -514,7 +514,7 @@
     "**Контроль:** один и тот же алгоритм (PPO), одинаковые `total_timesteps`, те же сетевые архитектуры и прочие гиперпараметры. Меняем только `gamma`.\n",
     "\n",
     "Сравним:\n",
-    "- PPO `gamma=0.80`\n",
+    "- PPO `gamma=0.50`\n",
     "- PPO `gamma=0.99`\n"
    ]
   },
@@ -722,10 +722,6 @@
    "id": "18a8fdd4",
    "metadata": {},
    "source": [
-    "## Выводы по экспериментам (шаблон)\n",
-    "\n",
-    "Заполните этот блок после запуска ячеек обучения и построения графиков.\n",
-    "\n",
     "### Эксперимент 1 (PPO vs SAC)\n",
     "- Алгоритм SAC почти сразу (уже с первых ~10–20k шагов) выходит на уровень примерно −250…−150 и дальше держится довольно стабильно. Разброс небольшой, а следовательно обучение устойчивое.\n",
     "\n",
